[package]
name = "tunnel_firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systick-monotonic = "1.0.1"
cortex-m-rtic = "1.1.3"
cortex-m-semihosting = "0.5.0"
usb-device = "0.2.9"
# panic-halt = "0.2.0"

[dependencies.panic-rtt-target]
version = "0.1.2"
features = ["cortex-m"]

[dependencies.rtt-target]
version = "0.3.1"
features = ["cortex-m"]

[dependencies.stm32f4xx-hal]
version = "0.14.0"
features = ["stm32f411", "usb_fs", "otg-fs", "rt", "rtic", "rtic-monotonic"]
