[package]
name = "tunnel_firmware"
version = "0.1.0"
edition = "2021"

[features]
RTT = ["dep:panic-rtt-target", "dep:rtt-target"]
HALT = ["dep:panic-halt"]
QEMU = ["dep:cortex-m-semihosting", "dep:panic-semihosting"]
CUSTOM_MIB_FREQUENCY = []
GAIN_SELECTOR = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systick-monotonic = "1.0.1"
cortex-m = "0.7.7"
cortex-m-rtic = "1.1.3"
cortex-m-semihosting = { version = "0.5.0", optional = true }
usb-device = "0.2.9"
usbd-serial = "0.1.1"
panic-halt = { version = "0.2.0", optional = true }
panic-semihosting = { version = "0.6.0", optional = true }
heapless = "0.7.16"
nb = "1.0.0"

[dependencies.panic-rtt-target]
version = "0.1.2"
features = ["cortex-m"]
optional = true

[dependencies.rtt-target]
version = "0.3.1"
features = ["cortex-m"]
optional = true

[dependencies.stm32f4xx-hal]
version = "0.14.0"
features = ["stm32f411", "usb_fs", "otg-fs", "rt", "rtic", "rtic-monotonic"]
